# Wisker

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_cleaner.py  test_cli.py  test_processor.py  test_transcriber.py
wisker/: __init__.py  cleaner.py  cli.py  processor.py  recorder.py  transcriber.py
