[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisker"
version = "0.1.0"
description = "Smart speech-to-text cleanup — captures what you say, writes what you mean"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "primess" }]
keywords = ["speech-to-text", "transcription", "cleanup", "filler-words", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "openai>=1.0",
    "pyperclip>=1.8",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
audio = [
    "pyaudio>=0.2.14",
]

[project.scripts]
wisker = "wisker.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
